--- a/main.css
+++ b/main.css
@@ -5,24 +5,26 @@ body{
 h1{
     font-size: 50px;
     line-height: 1.2em;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Lilita One', cursive;
 }
 p{
     font-size: 18px;
     line-height: 1.3em;
+    text-align: justify;
 }
 .container{
     display: flex;
+    margin-bottom: 50px;
 }
 .half-width{
     width: 50%;
-    padding: 20px;
-    margin-left: 10%;
+    padding-left: 7%;
 }
 .button-link{
-    background-image: linear-gradient(black, red);
+    /* background-image: linear-gradient(black, red); */
+    background-image: linear-gradient(to right, #FF512F 0%, #DD2476  51%, #FF512F  100%);
     text-decoration: none;
-    padding: 10px 40px;
+    padding: 10px 30px;
     color: azure;
     font-size: 20px;
     font-weight: 700;
@@ -31,12 +33,17 @@ p{
 .half-width img{
     width: 80%;
 }
-.header{
+/* .header-bg{
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin-left: -5%;
-    
-    
-    
+} */
+
+.about-bg{
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: -5%;
+    padding-right: 7%;
 }
