--- a/main.css
+++ b/main.css
@@ -28,10 +28,12 @@ p{
 .half-width{
     width: 50%;
     padding-left: 7%;
+    margin-bottom: -5px;
 }
 .button-link{
-    background-image: linear-gradient(#e3000e, #831619);
-    /* background-image: linear-gradient(to right, #FF512F 0%, #DD2476  51%, #FF512F  100%); */
+    /* background-image: linear-gradient(#e3000e, #83161aa9); */
+    /* background-image: linear-gradient(#e3000e, #f7be27); */
+    background-image: linear-gradient(to right, #FF512F 0%, #DD2476  51%, #FF512F  100%);
     text-decoration: none;
     padding: 10px 30px;
     color: azure;
@@ -86,8 +88,9 @@ p{
     background-color: #d2322b;
     color: white;
     padding: 5% 0% 0% 10%;
-    margin-top: -50px;
+    margin-top: 100px;
 }
+
 
 #mac-app, #google-app{
     width: 40%;
